Use `APP_UMBREL_ELECTRS_NODE_PORT`

--- a/btc-rpc-explorer/docker-compose.yml
+++ b/btc-rpc-explorer/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       BTCEXP_BITCOIND_PASS: $APP_UMBREL_BITCOIN_RPC_PASS
       # Electrum
       BTCEXP_ADDRESS_API: electrumx
-      BTCEXP_ELECTRUMX_SERVERS: "tcp://$APP_UMBREL_ELECTRS_NODE_IP:$ELECTRUM_PORT"
+      BTCEXP_ELECTRUMX_SERVERS: "tcp://$APP_UMBREL_ELECTRS_NODE_IP:$APP_UMBREL_ELECTRS_NODE_PORT"
       # Log level
       DEBUG: "btcexp:*,electrumClient"
       # Performance
