--- a/mempool/docker-compose.yml
+++ b/mempool/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       CORE_RPC_USERNAME: $APP_UMBREL_BITCOIN_RPC_USER
       CORE_RPC_PASSWORD: $APP_UMBREL_BITCOIN_RPC_PASS
       ELECTRUM_HOST: $APP_UMBREL_ELECTRS_NODE_IP
-      ELECTRUM_PORT: $ELECTRUM_PORT
+      ELECTRUM_PORT: $APP_UMBREL_ELECTRS_NODE_PORT
       ELECTRUM_TLS: "false"
       DATABASE_HOST: $APP_MEMPOOL_DB_IP
       DATABASE_PORT: "3306"
