--- a/samourai-server/docker-compose.yml
+++ b/samourai-server/docker-compose.yml
@@ -78,7 +78,7 @@ services:
 
       # INDEXER
       INDEXER_IP: $APP_UMBREL_ELECTRS_NODE_IP
-      INDEXER_RPC_PORT: $ELECTRUM_PORT
+      INDEXER_RPC_PORT: $APP_UMBREL_ELECTRS_NODE_PORT
       INDEXER_PROTOCOL: tcp
       INDEXER_BATCH_SUPPORT: inactive # 'active' for ElectrumX, 'inactive' otherwise
     depends_on:
