--- a/umbrel-electrs/docker-compose.yml
+++ b/umbrel-electrs/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       ELECTRS_NETWORK: "${APP_UMBREL_BITCOIN_NETWORK}"
       ELECTRS_DAEMON_RPC_ADDR: "${APP_UMBREL_BITCOIN_NODE_IP}:${APP_UMBREL_BITCOIN_RPC_PORT}"
       ELECTRS_DAEMON_P2P_ADDR: "${APP_UMBREL_BITCOIN_NODE_IP}:${APP_UMBREL_BITCOIN_P2P_PORT}"
-      ELECTRS_ELECTRUM_RPC_ADDR: "0.0.0.0:${ELECTRUM_PORT}"
+      ELECTRS_ELECTRUM_RPC_ADDR: "0.0.0.0:${APP_UMBREL_ELECTRS_NODE_PORT}"
       ELECTRS_SERVER_BANNER: "Umbrel Electrs (${APP_VERSION})"
       ELECTRS_DB_DIR: "/data/db"
       ELECTRS_COOKIE_FILE: "/data/.bitcoin/${APP_UMBREL_BITCOIN_NETWORK}/.cookie"
@@ -38,7 +38,7 @@ services:
       - "${APP_UMBREL_BITCOIN_DATA_DIR}:/data/.bitcoin:ro"
       - "${APP_DATA_DIR}/data/electrs:/data"
     ports:
-      - "${ELECTRUM_PORT}:${ELECTRUM_PORT}"
+      - "${APP_UMBREL_ELECTRS_NODE_PORT}:${APP_UMBREL_ELECTRS_NODE_PORT}"
     networks:
       default:
         ipv4_address: $APP_UMBREL_ELECTRS_NODE_IP
