--- a/urbit-bitcoin-connector/docker-compose.yml
+++ b/urbit-bitcoin-connector/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     environment:
       INTERNAL_IP: $APP_URBIT_BITCOIN_CONNECTOR_IP
       ELECTRUM_IP: $APP_UMBREL_ELECTRS_NODE_IP
-      ELECTRUM_PORT: $ELECTRUM_PORT
+      ELECTRUM_PORT: $APP_UMBREL_ELECTRS_NODE_PORT
       BITCOIN_IP: $APP_UMBREL_BITCOIN_NODE_IP
       BITCOIN_RPC_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
       BITCOIN_RPC_USER: $APP_UMBREL_BITCOIN_RPC_USER
