--- a/node-red/docker-compose.yml
+++ b/node-red/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       LND_IP: $APP_UMBREL_LIGHTNING_NODE_IP
       LND_GPRC_PORT: $APP_UMBREL_LIGHTNING_NODE_GRPC_PORT
       ELECTRUM_IP: $APP_UMBREL_ELECTRS_NODE_IP
-      ELECTRUM_PORT: $ELECTRUM_PORT
+      ELECTRUM_PORT: $APP_UMBREL_ELECTRS_NODE_PORT
     networks:
       default:
           ipv4_address: $APP_NODE_RED_IP
