--- a/umbrel-electrs/torrc.template
+++ b/umbrel-electrs/torrc.template
@@ -1,6 +1,6 @@
 # Electrs RPC Hidden Service
 HiddenServiceDir /data/app-$APP_ID-rpc
-HiddenServicePort $ELECTRUM_PORT $APP_UMBREL_ELECTRS_NODE_IP:$ELECTRUM_PORT
+HiddenServicePort $APP_UMBREL_ELECTRS_NODE_PORT $APP_UMBREL_ELECTRS_NODE_IP:$APP_UMBREL_ELECTRS_NODE_PORT
 
 # Electrs Frontend Hidden Service
 HiddenServiceDir /data/app-$APP_ID
