--- a/itchysats/docker-compose.yml
+++ b/itchysats/docker-compose.yml
@@ -13,12 +13,12 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data:/data
     command:
-      - --maker=$APP_UMBREL_BITCOIN_NETWORK.itchysats.network:10000
+      - --maker=$APP_BITCOIN_NETWORK.itchysats.network:10000
       - --maker-id=7e35e34801e766a6a29ecb9e22810ea4e3476c2b37bf75882edf94a68b1d9607
       - --password=$APP_PASSWORD
       - --umbrel-seed=$APP_SEED
-      - $APP_UMBREL_BITCOIN_NETWORK
-      - --electrum=tcp://$APP_UMBREL_ELECTRS_NODE_IP:$APP_UMBREL_ELECTRS_NODE_PORT
+      - $APP_BITCOIN_NETWORK
+      - --electrum=tcp://$APP_ELECTRS_NODE_IP:$APP_ELECTRS_NODE_PORT
 
     networks:
       default:
