--- a/jam/docker-compose.yml
+++ b/jam/docker-compose.yml
@@ -24,12 +24,12 @@ services:
       jm_onion_socks5_port: $TOR_PROXY_PORT
       jm_socks5_host: $TOR_PROXY_IP
       jm_socks5_port: $TOR_PROXY_PORT
-      jm_rpc_host: $APP_UMBREL_BITCOIN_NODE_IP
-      jm_rpc_port: $APP_UMBREL_BITCOIN_RPC_PORT
-      jm_rpc_user: $APP_UMBREL_BITCOIN_RPC_USER
-      jm_rpc_password: "${APP_UMBREL_BITCOIN_RPC_PASS}"
+      jm_rpc_host: $APP_BITCOIN_NODE_IP
+      jm_rpc_port: $APP_BITCOIN_RPC_PORT
+      jm_rpc_user: $APP_BITCOIN_RPC_USER
+      jm_rpc_password: "${APP_BITCOIN_RPC_PASS}"
       jm_rpc_wallet_file: jam_default
-      jm_network: $APP_UMBREL_BITCOIN_NETWORK
+      jm_network: $APP_BITCOIN_NETWORK
       jm_max_cj_fee_abs: 300000 # in sats
       jm_max_cj_fee_rel: 0.0003 # 0.03%
     networks:
