--- a/lnmarkets/docker-compose.yml
+++ b/lnmarkets/docker-compose.yml
@@ -12,11 +12,11 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     volumes:
-      - ${APP_UMBREL_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
+      - ${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
     environment:
-      LND_IP: $APP_UMBREL_LIGHTNING_NODE_IP
-      LND_GPRC_PORT: $APP_UMBREL_LIGHTNING_NODE_GRPC_PORT
-      BITCOIN_NETWORK: $APP_UMBREL_BITCOIN_NETWORK
+      LND_IP: $APP_LIGHTNING_NODE_IP
+      LND_GPRC_PORT: $APP_LIGHTNING_NODE_GRPC_PORT
+      BITCOIN_NETWORK: $APP_BITCOIN_NETWORK
       APP_HIDDEN_SERVICE: $APP_HIDDEN_SERVICE
       APP_DOMAIN: $APP_DOMAIN
       APP_PASSWORD: $APP_PASSWORD
