--- a/mempool/docker-compose.yml
+++ b/mempool/docker-compose.yml
@@ -28,12 +28,12 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data:/backend/cache
     environment:
-      CORE_RPC_HOST: $APP_UMBREL_BITCOIN_NODE_IP
-      CORE_RPC_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
-      CORE_RPC_USERNAME: $APP_UMBREL_BITCOIN_RPC_USER
-      CORE_RPC_PASSWORD: $APP_UMBREL_BITCOIN_RPC_PASS
-      ELECTRUM_HOST: $APP_UMBREL_ELECTRS_NODE_IP
-      ELECTRUM_PORT: $APP_UMBREL_ELECTRS_NODE_PORT
+      CORE_RPC_HOST: $APP_BITCOIN_NODE_IP
+      CORE_RPC_PORT: $APP_BITCOIN_RPC_PORT
+      CORE_RPC_USERNAME: $APP_BITCOIN_RPC_USER
+      CORE_RPC_PASSWORD: $APP_BITCOIN_RPC_PASS
+      ELECTRUM_HOST: $APP_ELECTRS_NODE_IP
+      ELECTRUM_PORT: $APP_ELECTRS_NODE_PORT
       ELECTRUM_TLS: "false"
       DATABASE_HOST: $APP_MEMPOOL_DB_IP
       DATABASE_PORT: "3306"
