--- a/node-red/docker-compose.yml
+++ b/node-red/docker-compose.yml
@@ -11,18 +11,18 @@ services:
     stop_grace_period: 1m
     volumes:
       - ${APP_DATA_DIR}/data:/data
-      - ${APP_UMBREL_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
+      - ${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
     environment:
       PORT: $APP_NODE_RED_PORT
-      BITCOIN_NETWORK: $APP_UMBREL_BITCOIN_NETWORK
-      BITCOIN_IP: $APP_UMBREL_BITCOIN_NODE_IP
-      BITCOIN_RPC_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
-      BITCOIN_RPC_USER: $APP_UMBREL_BITCOIN_RPC_USER
-      BITCOIN_RPC_PASS: $APP_UMBREL_BITCOIN_RPC_PASS
-      LND_IP: $APP_UMBREL_LIGHTNING_NODE_IP
-      LND_GPRC_PORT: $APP_UMBREL_LIGHTNING_NODE_GRPC_PORT
-      ELECTRUM_IP: $APP_UMBREL_ELECTRS_NODE_IP
-      ELECTRUM_PORT: $APP_UMBREL_ELECTRS_NODE_PORT
+      BITCOIN_NETWORK: $APP_BITCOIN_NETWORK
+      BITCOIN_IP: $APP_BITCOIN_NODE_IP
+      BITCOIN_RPC_PORT: $APP_BITCOIN_RPC_PORT
+      BITCOIN_RPC_USER: $APP_BITCOIN_RPC_USER
+      BITCOIN_RPC_PASS: $APP_BITCOIN_RPC_PASS
+      LND_IP: $APP_LIGHTNING_NODE_IP
+      LND_GPRC_PORT: $APP_LIGHTNING_NODE_GRPC_PORT
+      ELECTRUM_IP: $APP_ELECTRS_NODE_IP
+      ELECTRUM_PORT: $APP_ELECTRS_NODE_PORT
     networks:
       default:
           ipv4_address: $APP_NODE_RED_IP
