--- a/bitcoin/torrc.template
+++ b/bitcoin/torrc.template
@@ -1,10 +1,10 @@
 # Bitcoin Core P2P Hidden Service
 HiddenServiceDir /data/app-$APP_ID-p2p
-HiddenServicePort $APP_UMBREL_BITCOIN_P2P_PORT $APP_UMBREL_BITCOIN_NODE_IP:$APP_UMBREL_BITCOIN_P2P_PORT
+HiddenServicePort $APP_BITCOIN_P2P_PORT $APP_BITCOIN_NODE_IP:$APP_BITCOIN_P2P_PORT
 
 # Bitcoin Core RPC Hidden Service
 HiddenServiceDir /data/app-$APP_ID-rpc
-HiddenServicePort $APP_UMBREL_BITCOIN_RPC_PORT $APP_UMBREL_BITCOIN_NODE_IP:$APP_UMBREL_BITCOIN_RPC_PORT
+HiddenServicePort $APP_BITCOIN_RPC_PORT $APP_BITCOIN_NODE_IP:$APP_BITCOIN_RPC_PORT
 
 # Bitcoin Core Frontend Hidden Service
 HiddenServiceDir /data/app-$APP_ID
