--- a/bluewallet/docker-compose.yml
+++ b/bluewallet/docker-compose.yml
@@ -27,13 +27,13 @@ services:
     stop_grace_period: "1m"
     init: true
     volumes:
-      - "${APP_UMBREL_LIGHTNING_NODE_DATA_DIR}:/lnd:ro"
+      - "${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro"
     environment:
       PORT: "${APP_BLUEWALLET_LNDHUB_PORT}"
       TOR_URL: "${APP_HIDDEN_SERVICE}"
       LND_CERT_FILE: "/lnd/tls.cert"
-      LND_ADMIN_MACAROON_FILE: "/lnd/data/chain/bitcoin/${APP_UMBREL_BITCOIN_NETWORK}/admin.macaroon"
-      CONFIG: '{ "rateLimit": 10000, "postRateLimit": 10000, "redis": { "port": 6379, "host": "$APP_BLUEWALLET_REDIS_IP", "family": 4, "password": "moneyprintergobrrr", "db": 0 }, "lnd": { "url": "$APP_UMBREL_LIGHTNING_NODE_IP:$APP_UMBREL_LIGHTNING_NODE_GRPC_PORT", "password": ""}}'
+      LND_ADMIN_MACAROON_FILE: "/lnd/data/chain/bitcoin/${APP_BITCOIN_NETWORK}/admin.macaroon"
+      CONFIG: '{ "rateLimit": 10000, "postRateLimit": 10000, "redis": { "port": 6379, "host": "$APP_BLUEWALLET_REDIS_IP", "family": 4, "password": "moneyprintergobrrr", "db": 0 }, "lnd": { "url": "$APP_LIGHTNING_NODE_IP:$APP_LIGHTNING_NODE_GRPC_PORT", "password": ""}}'
     networks:
       default:
         ipv4_address: "${APP_BLUEWALLET_LNDHUB_IP}"
