--- a/helipad/docker-compose.yml
+++ b/helipad/docker-compose.yml
@@ -14,9 +14,9 @@ services:
     user: "1000:1000"
     volumes:
       - ${APP_DATA_DIR}/data:/data
-      - ${APP_UMBREL_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
+      - ${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
     environment:
-      LND_URL: "$APP_UMBREL_LIGHTNING_NODE_IP:$APP_UMBREL_LIGHTNING_NODE_GRPC_PORT"
+      LND_URL: "$APP_LIGHTNING_NODE_IP:$APP_LIGHTNING_NODE_GRPC_PORT"
     networks:
       default:
         ipv4_address: $APP_HELIPAD_IP
