--- a/lightning/torrc.template
+++ b/lightning/torrc.template
@@ -1,10 +1,10 @@
 # LND REST Hidden Service
 HiddenServiceDir /data/app-$APP_ID-rest
-HiddenServicePort $APP_UMBREL_LIGHTNING_NODE_REST_PORT $APP_UMBREL_LIGHTNING_NODE_IP:$APP_UMBREL_LIGHTNING_NODE_REST_PORT
+HiddenServicePort $APP_LIGHTNING_NODE_REST_PORT $APP_LIGHTNING_NODE_IP:$APP_LIGHTNING_NODE_REST_PORT
 
 # LND gRPC Hidden Service
 HiddenServiceDir /data/app-$APP_ID-grpc
-HiddenServicePort $APP_UMBREL_LIGHTNING_NODE_GRPC_PORT $APP_UMBREL_LIGHTNING_NODE_IP:$APP_UMBREL_LIGHTNING_NODE_GRPC_PORT
+HiddenServicePort $APP_LIGHTNING_NODE_GRPC_PORT $APP_LIGHTNING_NODE_IP:$APP_LIGHTNING_NODE_GRPC_PORT
 
 # LND Frontend Hidden Service
 HiddenServiceDir /data/app-$APP_ID
