--- a/samourai-server/docker-compose.yml
+++ b/samourai-server/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     user: "1000:1000"
     environment:
       # GLOBAL
-      COMMON_BTC_NETWORK: $APP_UMBREL_BITCOIN_NETWORK
+      COMMON_BTC_NETWORK: $APP_BITCOIN_NETWORK
       DOJO_VERSION_TAG: 1.15.0
       NET_DOJO_TOR_IPV4: $TOR_PROXY_IP
       TOR_SOCKS_PORT: $TOR_PROXY_PORT
@@ -66,19 +66,19 @@ services:
       NODE_JWT_SECRET: $APP_SAMOURAI_SERVER_NODE_JWT_SECRET
 
       # BITCOIN
-      BITCOIND_IP: $APP_UMBREL_BITCOIN_NODE_IP
-      BITCOIND_RPC_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
-      BITCOIND_RPC_USER: $APP_UMBREL_BITCOIN_RPC_USER
-      BITCOIND_RPC_PASSWORD: $APP_UMBREL_BITCOIN_RPC_PASS
-      BITCOIND_ZMQ_RAWTXS: $APP_UMBREL_BITCOIN_ZMQ_RAWTX_PORT
-      BITCOIND_ZMQ_BLK_HASH: $APP_UMBREL_BITCOIN_ZMQ_HASHBLOCK_PORT
+      BITCOIND_IP: $APP_BITCOIN_NODE_IP
+      BITCOIND_RPC_PORT: $APP_BITCOIN_RPC_PORT
+      BITCOIND_RPC_USER: $APP_BITCOIN_RPC_USER
+      BITCOIND_RPC_PASSWORD: $APP_BITCOIN_RPC_PASS
+      BITCOIND_ZMQ_RAWTXS: $APP_BITCOIN_ZMQ_RAWTX_PORT
+      BITCOIND_ZMQ_BLK_HASH: $APP_BITCOIN_ZMQ_HASHBLOCK_PORT
 
       # EXPLORER
       EXPLORER_INSTALL: "off"
 
       # INDEXER
-      INDEXER_IP: $APP_UMBREL_ELECTRS_NODE_IP
-      INDEXER_RPC_PORT: $APP_UMBREL_ELECTRS_NODE_PORT
+      INDEXER_IP: $APP_ELECTRS_NODE_IP
+      INDEXER_RPC_PORT: $APP_ELECTRS_NODE_PORT
       INDEXER_PROTOCOL: tcp
       INDEXER_BATCH_SUPPORT: inactive # 'active' for ElectrumX, 'inactive' otherwise
     depends_on:
@@ -106,7 +106,7 @@ services:
       - "--cli.mix.clientsPerPool=1"
       - "--resync"
     environment:
-      WHIRLPOOL_BITCOIN_NETWORK: $APP_UMBREL_BITCOIN_NETWORK
+      WHIRLPOOL_BITCOIN_NETWORK: $APP_BITCOIN_NETWORK
       WHIRLPOOL_DOJO: "on"
       WHIRLPOOL_DOJO_IP: $APP_SAMOURAI_SERVER_IP
     volumes:
@@ -123,11 +123,11 @@ services:
     volumes:
       - ${APP_DATA_DIR}/nginx/wait-for:/wait-for
       - ${APP_DATA_DIR}/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ${APP_DATA_DIR}/nginx/${APP_UMBREL_BITCOIN_NETWORK}.conf:/etc/nginx/sites-enabled/dojo.conf
+      - ${APP_DATA_DIR}/nginx/${APP_BITCOIN_NETWORK}.conf:/etc/nginx/sites-enabled/dojo.conf
       - ${APP_DATA_DIR}/nginx/connect.conf:/etc/nginx/sites-enabled/connect.conf
       - ${APP_DATA_DIR}/nginx/connect:/var/www/connect
     environment:
-      COMMON_BTC_NETWORK: $APP_UMBREL_BITCOIN_NETWORK
+      COMMON_BTC_NETWORK: $APP_BITCOIN_NETWORK
       DOJO_LOCAL_PORT: $APP_SAMOURAI_SERVER_DOJO_PORT
       DOJO_HIDDEN_SERVICE: $APP_SAMOURAI_SERVER_DOJO_HIDDEN_SERVICE
       WHIRLPOOL_HIDDEN_SERVICE: $APP_SAMOURAI_SERVER_WHIRLPOOL_HIDDEN_SERVICE
