--- a/specter-desktop/docker-compose.yml
+++ b/specter-desktop/docker-compose.yml
@@ -18,10 +18,10 @@ services:
       - --specter-data-folder=/data
     environment:
       # TODO: APP_PASSWORD
-      BTC_RPC_USER: $APP_UMBREL_BITCOIN_RPC_USER
-      BTC_RPC_PASSWORD: $APP_UMBREL_BITCOIN_RPC_PASS
-      BTC_RPC_HOST: $APP_UMBREL_BITCOIN_NODE_IP
-      BTC_RPC_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
+      BTC_RPC_USER: $APP_BITCOIN_RPC_USER
+      BTC_RPC_PASSWORD: $APP_BITCOIN_RPC_PASS
+      BTC_RPC_HOST: $APP_BITCOIN_NODE_IP
+      BTC_RPC_PORT: $APP_BITCOIN_RPC_PORT
       BTC_RPC_PROTOCOL: http
     networks:
       default:
