--- a/suredbits-wallet/docker-compose.yml
+++ b/suredbits-wallet/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data/wallet:/home/bitcoin-s/.bitcoin-s
     environment:
-      BITCOIN_S_NETWORK: $APP_UMBREL_BITCOIN_NETWORK
+      BITCOIN_S_NETWORK: $APP_BITCOIN_NETWORK
       BITCOIN_S_KEYMANAGER_ENTROPY: $APP_SEED  
       BITCOIN_S_PROXY_ENABLED: "false"
       BITCOIN_S_TOR_ENABLED: "false"
@@ -44,10 +44,10 @@ services:
       BITCOIN_S_DLCNODE_PROXY_ENABLED: "true"
       BITCOIN_S_DLCNODE_PROXY_SOCKS5: "${TOR_PROXY_IP}:${TOR_PROXY_PORT}"
       BITCOIN_S_DLCNODE_EXTERNAL_IP: $APP_SUREDBITS_WALLET_P2P_HIDDEN_SERVICE
-      BITCOIN_S_BITCOIND_HOST: $APP_UMBREL_BITCOIN_NODE_IP
-      BITCOIN_S_BITCOIND_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
-      BITCOIN_S_BITCOIND_USER: $APP_UMBREL_BITCOIN_RPC_USER
-      BITCOIN_S_BITCOIND_PASSWORD: $APP_UMBREL_BITCOIN_RPC_PASS
+      BITCOIN_S_BITCOIND_HOST: $APP_BITCOIN_NODE_IP
+      BITCOIN_S_BITCOIND_PORT: $APP_BITCOIN_RPC_PORT
+      BITCOIN_S_BITCOIND_USER: $APP_BITCOIN_RPC_USER
+      BITCOIN_S_BITCOIND_PASSWORD: $APP_BITCOIN_RPC_PASS
       BITCOIN_S_SERVER_RPC_PASSWORD: $APP_PASSWORD
     ports:
       - "$APP_SUREDBITS_WALLET_P2P_PORT:$APP_SUREDBITS_WALLET_P2P_PORT"
