--- a/tallycoin-connect/docker-compose.yml
+++ b/tallycoin-connect/docker-compose.yml
@@ -12,11 +12,11 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     volumes:
-      - ${APP_UMBREL_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
+      - ${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
       - ${APP_DATA_DIR}/data:/data
     environment:
-      LND_SOCKET: "$APP_UMBREL_LIGHTNING_NODE_IP:$APP_UMBREL_LIGHTNING_NODE_GRPC_PORT"
-      LND_MACAROON_PATH: "/lnd/data/chain/bitcoin/$APP_UMBREL_BITCOIN_NETWORK/admin.macaroon"
+      LND_SOCKET: "$APP_LIGHTNING_NODE_IP:$APP_LIGHTNING_NODE_GRPC_PORT"
+      LND_MACAROON_PATH: "/lnd/data/chain/bitcoin/$APP_BITCOIN_NETWORK/admin.macaroon"
       LND_TLSCERT_PATH: "/lnd/tls.cert"
       CONFIG_FILE: "/data/tallycoin_api.key"
       TALLYCOIN_PASSWD_CLEARTEXT: "$APP_PASSWORD"
