Use `UMBREL_USER_GROUP_ID` instead of `1000:1000`

--- a/bitfeed/docker-compose.yml
+++ b/bitfeed/docker-compose.yml
@@ -22,7 +22,7 @@ services:
 
   api:
     image: ghcr.io/bitfeed-project/bitfeed-server:v2.2.1@sha256:60eae8109d3d6a377aec8a954f93b6be9ee48de717c9ab5810c2a5afcf688554
-    user: "1000:1000"
+    user: "${UMBREL_USER_GROUP_ID}"
     restart: on-failure
     stop_grace_period: 1m
     environment:
