--- a/code-server/docker-compose.yml
+++ b/code-server/docker-compose.yml
@@ -9,7 +9,7 @@ services:
   server:
     image: codercom/code-server:3.11.1@sha256:9bb2444f9d0c26765924e29155ac4a8febecb1e080f12c4e368e71dbe6a675b5
     restart: on-failure
-    user: "1000:1000"
+    user: "${UMBREL_USER_GROUP_ID}"
     volumes:
       - ${APP_DATA_DIR}/data:/home/coder
     environment:
