--- a/lnbits/docker-compose.yml
+++ b/lnbits/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: $APP_LNBITS_PORT
   web:
     image: lnbitsdocker/lnbits-legend:0.8.0@sha256:3426e326bac347d09b4e018780cb1ecd8e5eac35851383d476076769ab4a9b2e
-    user: 1000:1000
+    user: "${UMBREL_USER_GROUP_ID}"
     init: true
     restart: on-failure
     stop_grace_period: 1m
