--- a/pi-hole/docker-compose.yml
+++ b/pi-hole/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     image: pihole/pihole:2022.01.1@sha256:a02faea91d505d0bfc1583049f3e943f2c3afe03df574e625ffa828b16b85832
     # Pi-hole doesn't currently support running as non-root
     # https://github.com/pi-hole/docker-pi-hole/issues/685
-    # user: "1000:1000"
+    # user: "${UMBREL_USER_GROUP_ID}"
     restart: on-failure
     ports:
       - 53:53
