--- a/tallycoin-connect/docker-compose.yml
+++ b/tallycoin-connect/docker-compose.yml
@@ -8,7 +8,7 @@ services:
 
   web:
     image: dennisreimann/tallycoin_connect:v1.7.3@sha256:802a53da7591473c1a8d97e145a717781c152657343498f62ef3f53e56c86c67
-    user: "1000:1000"
+    user: "${UMBREL_USER_GROUP_ID}"
     restart: on-failure
     stop_grace_period: 1m
     volumes:
