--- a/agora/docker-compose.yml
+++ b/agora/docker-compose.yml
@@ -8,7 +8,7 @@ services:
 
   filebrowser:
     image: filebrowser/filebrowser:v2.21.1@sha256:e1f43b1b8a1acb1d7cd5f934454e7a2ef571ea3bab48b0e1ed0fa97ef9df8d69
-    user: 1000:1000
+    user: "${UMBREL_USER_GROUP_ID}"
     restart: on-failure
     stop_grace_period: 1m
     volumes:
@@ -30,7 +30,7 @@ services:
     volumes:
       - ${APP_DATA_DIR}/files:/files
       - ${LND_DATA_DIR}:/lnd:ro
-    user: "1000:1000"
+    user: "${UMBREL_USER_GROUP_ID}"
     environment:
       # LND environment variables
       LND_RPC_AUTHORITY: "$LND_IP:$LND_GRPC_PORT"
