--- a/electrumx/docker-compose.yml
+++ b/electrumx/docker-compose.yml
@@ -8,7 +8,7 @@ services:
 
   server:
     image: lukechilds/electrumx:v1.16.0@sha256:2949784536f8f85af229004e12e5b5c3a1d7428918a492f77b4e958035c2ae2a
-    user: "1000:1000"
+    user: "${UMBREL_USER_GROUP_ID}"
     init: true
     restart: on-failure
     stop_grace_period: 1m
