--- a/element/docker-compose.yml
+++ b/element/docker-compose.yml
@@ -9,7 +9,7 @@ services:
   web:
     image: getumbrel/element-web:v1.8.4@sha256:16b2776278a8a9d8a2397ccd75484f8728fd3223cb3329bf572b50b8f950636c
     # NGINX parent container requires root
-    # user: "1000:1000"
+    # user: "${UMBREL_USER_GROUP_ID}"
     restart: on-failure
     stop_grace_period: 1m
     networks:
