--- a/helipad/docker-compose.yml
+++ b/helipad/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     init: true
     restart: on-failure
     stop_grace_period: 1m
-    user: "1000:1000"
+    user: "${UMBREL_USER_GROUP_ID}"
     volumes:
       - ${APP_DATA_DIR}/data:/data
       - ${LND_DATA_DIR}:/lnd:ro
