--- a/krystal-bull/docker-compose.yml
+++ b/krystal-bull/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3001
   web:
     image: bitcoinscala/oracle-server-ui:1.9.0-c946d255-SNAPSHOT@sha256:8524db49036e35ce0da2dca515d54ed997328c3ca339d81e7782d4764c195995
-    user: "1000:1000"
+    user: "${UMBREL_USER_GROUP_ID}"
     restart: on-failure
     stop_grace_period: 1m
     volumes:
