--- a/lightning-terminal/docker-compose.yml
+++ b/lightning-terminal/docker-compose.yml
@@ -8,7 +8,7 @@ services:
 
   web:
     image: lightninglabs/lightning-terminal:v0.6.5-alpha@sha256:541fb9034a25dd4336becabdee6d40f76c3f4ae4557cbce30a46a3a8e3ef0e74
-    user: "1000:1000"
+    user: "${UMBREL_USER_GROUP_ID}"
     restart: on-failure
     stop_grace_period: 1m
     volumes:
