--- a/simple-torrent/docker-compose.yml
+++ b/simple-torrent/docker-compose.yml
@@ -8,7 +8,7 @@ services:
 
   server:
     image: boypt/cloud-torrent:1.3.4@sha256:a1355e9ac319d523ce1fd6e8d34ab8e4bf0b5476c52bfe244e37fea64f6f4228
-    user: "1000:1000"
+    user: "${UMBREL_USER_GROUP_ID}"
     restart: on-failure
     command: >
       --port=${APP_SIMPLE_TORRENT_PORT}
