--- a/squeaknode/docker-compose.yml
+++ b/squeaknode/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     volumes:
       - ${APP_DATA_DIR}/sqk:/sqk
       - ${LND_DATA_DIR}:/lnd:ro
-    user: "1000:1000"
+    user: "${UMBREL_USER_GROUP_ID}"
     environment:
       # Bitcoin Core connection details
       SQUEAKNODE_BITCOIN_RPC_HOST: $BITCOIN_IP
