--- a/synapse/docker-compose.yml
+++ b/synapse/docker-compose.yml
@@ -8,7 +8,7 @@ services:
 
   server:
     image: matrixdotorg/synapse:v1.42.0@sha256:10a1dd576504af002a1107d6d1edddc5bb891ccfc404218fbd99a15531cef742
-    user: "1000:1000"
+    user: "${UMBREL_USER_GROUP_ID}"
     restart: on-failure
     stop_grace_period: 1m
     entrypoint: "bash"
