--- a/thunderhub/docker-compose.yml
+++ b/thunderhub/docker-compose.yml
@@ -8,7 +8,7 @@ services:
 
   web:
     image: apotdevin/thunderhub:v0.12.31@sha256:f86341cb1987a3907f7227ccd4c00dead68d372e464b111414b8427228062276
-    user: "1000:1000"
+    user: "${UMBREL_USER_GROUP_ID}"
     restart: on-failure
     stop_grace_period: 1m
     volumes:
