--- a/simple-torrent/docker-compose.yml
+++ b/simple-torrent/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   app_proxy:
     environment:
       APP_HOST: $APP_SIMPLE_TORRENT_IP
-      APP_PORT: $APP_SIMPLETORRENT_PORT
+      APP_PORT: $APP_SIMPLE_TORRENT_PORT
 
   server:
     image: boypt/cloud-torrent:1.3.4@sha256:a1355e9ac319d523ce1fd6e8d34ab8e4bf0b5476c52bfe244e37fea64f6f4228
