--- a/snowflake/docker-compose.yml
+++ b/snowflake/docker-compose.yml
@@ -8,6 +8,7 @@ services:
 
   proxy:
     image: getumbrel/snowflake:v2.1.0@sha256:875a513540a132752a4b09f5d6de4ed41399c5331265d6576dcfb5952bb22053
+    user: "${UMBREL_USER_GROUP_ID}"
     restart: on-failure
     stop_grace_period: 1m
     command: "-log /data/snowflake.log -verbose"
@@ -19,6 +20,7 @@ services:
 
   web:
     image: getumbrel/gotty:v1.0.1@sha256:100571d271cfbae25603acac216afce511eece9961218c6db427e0fa4a58716a
+    user: "${UMBREL_USER_GROUP_ID}"
     restart: on-failure
     stop_grace_period: 1m
     command: --port $APP_SNOWFLAKE_PORT --index "/snowflake/index.html" --title-format "Tor Snowflake Proxy" bash -c 'tail -n 10000 -f /snowflake/snowflake.log | grep "Traffic Relayed"'
