Add Bitcoin, Lightning, Electrs, ElectrumX and Fulcrum apps
Co-authored-by: Steven Briscoe <me@stevenbriscoe.com>

--- a/bitfeed/docker-compose.yml
+++ b/bitfeed/docker-compose.yml
@@ -27,13 +27,13 @@ services:
     stop_grace_period: 1m
     environment:
       PORT: "$APP_BITFEED_API_PORT"
-      BITCOIN_HOST: "$BITCOIN_IP"
-      BITCOIN_ZMQ_RAWTX_PORT: "$BITCOIN_ZMQ_RAWTX_PORT"
-      BITCOIN_ZMQ_RAWBLOCK_PORT: "$BITCOIN_ZMQ_RAWBLOCK_PORT"
-      BITCOIN_ZMQ_SEQUENCE_PORT: "$BITCOIN_ZMQ_SEQUENCE_PORT"
-      BITCOIN_RPC_PORT: "$BITCOIN_RPC_PORT"
-      BITCOIN_RPC_USER: "$BITCOIN_RPC_USER"
-      BITCOIN_RPC_PASS: "$BITCOIN_RPC_PASS"
+      BITCOIN_HOST: "$APP_BITCOIN_NODE_IP"
+      BITCOIN_ZMQ_RAWTX_PORT: "$APP_BITCOIN_ZMQ_RAWTX_PORT"
+      BITCOIN_ZMQ_RAWBLOCK_PORT: "$APP_BITCOIN_ZMQ_RAWBLOCK_PORT"
+      BITCOIN_ZMQ_SEQUENCE_PORT: "$APP_BITCOIN_ZMQ_SEQUENCE_PORT"
+      BITCOIN_RPC_PORT: "$APP_BITCOIN_RPC_PORT"
+      BITCOIN_RPC_USER: "$APP_BITCOIN_RPC_USER"
+      BITCOIN_RPC_PASS: "$APP_BITCOIN_RPC_PASS"
       RPC_POOLS: "1"
       RPC_POOL_SIZE: "16"
       LOG_LEVEL: "info"
