--- a/btc-rpc-explorer/docker-compose.yml
+++ b/btc-rpc-explorer/docker-compose.yml
@@ -14,13 +14,13 @@ services:
       # Docker requirements
       BTCEXP_HOST: 0.0.0.0
       # Bitcoin Core
-      BTCEXP_BITCOIND_HOST: $BITCOIN_IP
-      BTCEXP_BITCOIND_PORT: $BITCOIN_RPC_PORT
-      BTCEXP_BITCOIND_USER: $BITCOIN_RPC_USER
-      BTCEXP_BITCOIND_PASS: $BITCOIN_RPC_PASS
+      BTCEXP_BITCOIND_HOST: $APP_BITCOIN_NODE_IP
+      BTCEXP_BITCOIND_PORT: $APP_BITCOIN_RPC_PORT
+      BTCEXP_BITCOIND_USER: $APP_BITCOIN_RPC_USER
+      BTCEXP_BITCOIND_PASS: $APP_BITCOIN_RPC_PASS
       # Electrum
       BTCEXP_ADDRESS_API: electrumx
-      BTCEXP_ELECTRUMX_SERVERS: "tcp://$ELECTRUM_IP:$ELECTRUM_PORT"
+      BTCEXP_ELECTRUMX_SERVERS: "tcp://$APP_ELECTRS_NODE_IP:$APP_ELECTRS_NODE_PORT"
       # Log level
       DEBUG: "btcexp:*,electrumClient"
       # Performance
