--- a/satsale/docker-compose.yml
+++ b/satsale/docker-compose.yml
@@ -11,14 +11,14 @@ services:
     stop_grace_period: 1m
     volumes:
       - ${APP_DATA_DIR}/data:/data
-      - ${LND_DATA_DIR}:/lnd:ro
+      - ${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
     environment:
       DATA_DIR: "/data"
       # Lightning node connection details
-      LND_DATA_DIR: $LND_DATA_DIR
-      LND_HOST: $LND_IP
-      LND_GRPC_PORT: $LND_GRPC_PORT
-      MACAROON_FILE: /lnd/data/chain/bitcoin/${BITCOIN_NETWORK}/invoice.macaroon
+      LND_DATA_DIR: $APP_LIGHTNING_NODE_DATA_DIR
+      LND_HOST: $APP_LIGHTNING_NODE_IP
+      LND_GPRC_PORT: $APP_LIGHTNING_NODE_GRPC_PORT
+      MACAROON_FILE: /lnd/data/chain/bitcoin/${APP_BITCOIN_NETWORK}/invoice.macaroon
       TLS_FILE: /lnd/tls.cert
       APP_PASSWORD: $APP_PASSWORD
     networks:
