--- a/urbit-bitcoin-connector/docker-compose.yml
+++ b/urbit-bitcoin-connector/docker-compose.yml
@@ -15,13 +15,13 @@ services:
       - ${APP_URBIT_BITCOIN_CONNECTOR_SERVER_PORT}:${APP_URBIT_BITCOIN_CONNECTOR_SERVER_PORT}
     environment:
       INTERNAL_IP: $APP_URBIT_BITCOIN_CONNECTOR_IP
-      ELECTRUM_IP: $ELECTRUM_IP
-      ELECTRUM_PORT: $ELECTRUM_PORT
-      BITCOIN_IP: $BITCOIN_IP
-      BITCOIN_RPC_PORT: $BITCOIN_RPC_PORT
-      BITCOIN_RPC_USER: $BITCOIN_RPC_USER
-      BITCOIN_RPC_PASS: $BITCOIN_RPC_PASS
-      BITCOIN_RPC_AUTH: $BITCOIN_RPC_AUTH
+      ELECTRUM_IP: $APP_ELECTRS_NODE_IP
+      ELECTRUM_PORT: $APP_ELECTRS_NODE_PORT
+      BITCOIN_IP: $APP_BITCOIN_NODE_IP
+      BITCOIN_RPC_PORT: $APP_BITCOIN_RPC_PORT
+      BITCOIN_RPC_USER: $APP_BITCOIN_RPC_USER
+      BITCOIN_RPC_PASS: $APP_BITCOIN_RPC_PASS
+      BITCOIN_RPC_AUTH: $APP_BITCOIN_RPC_AUTH
     networks:
       default:
           ipv4_address: $APP_URBIT_BITCOIN_CONNECTOR_IP
