--- a/agora/docker-compose.yml
+++ b/agora/docker-compose.yml
@@ -29,13 +29,13 @@ services:
     stop_grace_period: 1m
     volumes:
       - ${APP_DATA_DIR}/files:/files
-      - ${LND_DATA_DIR}:/lnd:ro
+      - ${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
     user: "1000:1000"
     environment:
       # LND environment variables
-      LND_RPC_AUTHORITY: "$LND_IP:$LND_GRPC_PORT"
+      LND_RPC_AUTHORITY: "$APP_LIGHTNING_NODE_IP:$APP_LIGHTNING_NODE_GRPC_PORT"
       TLS_CERT_PATH: "/lnd/tls.cert"
-      INVOICES_MACAROON_PATH: "/lnd/data/chain/bitcoin/$BITCOIN_NETWORK/invoice.macaroon"
+      INVOICES_MACAROON_PATH: "/lnd/data/chain/bitcoin/$APP_BITCOIN_NETWORK/invoice.macaroon"
 
       # App specific environment variables
       FILES_DIR: "/files"
