--- a/bleskomat-server/docker-compose.yml
+++ b/bleskomat-server/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - db
     volumes:
       - $APP_DATA_DIR/data/web:/usr/src/app/data
-      - $LND_DATA_DIR:/lnd:ro
+      - $APP_LIGHTNING_NODE_DATA_DIR:/lnd:ro
     environment:
       DEBUG: "bleskomat-server*,lnurl*"
       BLESKOMAT_SERVER_HOST: "0.0.0.0"
@@ -38,7 +38,7 @@ services:
       BLESKOMAT_SERVER_URL: "$APP_HIDDEN_SERVICE"
       BLESKOMAT_SERVER_ENDPOINT: "/u"
       BLESKOMAT_SERVER_AUTH_API_KEYS: '[]'
-      BLESKOMAT_SERVER_LIGHTNING: '{"backend":"lnd","config":{"cert":"/lnd/tls.cert","protocol":"https","hostname":"$LND_IP:$LND_REST_PORT","macaroon":"/lnd/data/chain/bitcoin/$BITCOIN_NETWORK/admin.macaroon"}}'
+      BLESKOMAT_SERVER_LIGHTNING: '{"backend":"lnd","config":{"cert":"/lnd/tls.cert","protocol":"https","hostname":"$APP_LIGHTNING_NODE_IP:$APP_LIGHTNING_NODE_REST_PORT","macaroon":"/lnd/data/chain/bitcoin/$APP_BITCOIN_NETWORK/admin.macaroon"}}'
       BLESKOMAT_SERVER_STORE: '{"backend":"knex","config":{"client":"postgres","connection":{"host":"$APP_BLESKOMAT_SERVER_DB_IP","port":5432,"user":"bleskomat_server","password":"moneyprintergobrrr","database":"bleskomat_server"}}}'
       BLESKOMAT_SERVER_COINRATES_DEFAULTS_PROVIDER: "coinbase"
       BLESKOMAT_SERVER_ADMIN_WEB: "true"
