--- a/btcpay-server/docker-compose.yml
+++ b/btcpay-server/docker-compose.yml
@@ -15,15 +15,15 @@ services:
         - ${APP_DATA_DIR}/data/nbxplorer:/data
     environment:
         NBXPLORER_DATADIR: "/data"
-        NBXPLORER_NETWORK: "$BITCOIN_NETWORK"
+        NBXPLORER_NETWORK: "$APP_BITCOIN_NETWORK"
         NBXPLORER_PORT: 32838
         NBXPLORER_BIND: 0.0.0.0
         NBXPLORER_CHAINS: "btc"
         NBXPLORER_SIGNALFILEDIR: "/data"
-        NBXPLORER_BTCRPCURL: "http://$BITCOIN_IP:$BITCOIN_RPC_PORT"
-        NBXPLORER_BTCNODEENDPOINT: $BITCOIN_IP:$BITCOIN_P2P_PORT
-        NBXPLORER_BTCRPCUSER: $BITCOIN_RPC_USER
-        NBXPLORER_BTCRPCPASSWORD: $BITCOIN_RPC_PASS
+        NBXPLORER_BTCRPCURL: "http://$APP_BITCOIN_NODE_IP:$APP_BITCOIN_RPC_PORT"
+        NBXPLORER_BTCNODEENDPOINT: $APP_BITCOIN_NODE_IP:$APP_BITCOIN_P2P_PORT
+        NBXPLORER_BTCRPCUSER: $APP_BITCOIN_RPC_USER
+        NBXPLORER_BTCRPCPASSWORD: $APP_BITCOIN_RPC_PASS
     networks:
       default:
         ipv4_address: $APP_BTCPAY_SERVER_NBXPLORER_IP
@@ -38,18 +38,18 @@ services:
     volumes:
         - ${APP_DATA_DIR}/data/btcpay:/data
         - ${APP_DATA_DIR}/data/nbxplorer:/data/.nbxplorer
-        - ${LND_DATA_DIR}:/lnd:ro
+        - ${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
     environment:
         HOME: "/data"
         BTCPAY_DATADIR: "/data"
         BTCPAY_PLUGINDIR: "/data/plugins"
         BTCPAY_DOCKERDEPLOYMENT: "false"
-        BTCPAY_POSTGRES: "User ID=postgres;Host=$APP_BTCPAY_SERVER_DB_IP;Port=5432;Database=btcpayserver$BITCOIN_NETWORK"
-        BTCPAY_NETWORK: "$BITCOIN_NETWORK"
+        BTCPAY_POSTGRES: "User ID=postgres;Host=$APP_BTCPAY_SERVER_DB_IP;Port=5432;Database=btcpayserver$APP_BITCOIN_NETWORK"
+        BTCPAY_NETWORK: "$APP_BITCOIN_NETWORK"
         BTCPAY_BIND: 0.0.0.0:$APP_BTCPAY_SERVER_PORT
         BTCPAY_CHAINS: "btc"
         BTCPAY_BTCEXPLORERURL: "http://$APP_BTCPAY_SERVER_NBXPLORER_IP:32838"
-        BTCPAY_BTCLIGHTNING: "type=lnd-rest;server=https://$LND_IP:$LND_REST_PORT/;macaroonfilepath=/lnd/data/chain/bitcoin/$BITCOIN_NETWORK/admin.macaroon;allowinsecure=true"
+        BTCPAY_BTCLIGHTNING: "type=lnd-rest;server=https://$APP_LIGHTNING_NODE_IP:$APP_LIGHTNING_NODE_REST_PORT/;macaroonfilepath=/lnd/data/chain/bitcoin/$APP_BITCOIN_NETWORK/admin.macaroon;allowinsecure=true"
         BTCPAY_SOCKSENDPOINT: $TOR_PROXY_IP:$TOR_PROXY_PORT
     networks:
       default:
