--- a/kollider/docker-compose.yml
+++ b/kollider/docker-compose.yml
@@ -12,10 +12,10 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     volumes:
-      - ${LND_DATA_DIR}:/lnd:ro
+      - ${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
       - ${APP_DATA_DIR}/data/logs:/app/logs
     environment:
-      LND_IP: $LND_IP
+      LND_IP: $APP_LIGHTNING_NODE_IP
       LND_ZMQ_SUB_ADDRESS: "tcp://${APP_KOLLIDER_WS_IP}:5556"
     networks:
       default:
