--- a/lightning-shell/docker-compose.yml
+++ b/lightning-shell/docker-compose.yml
@@ -10,16 +10,16 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     volumes:
-      - ${LND_DATA_DIR}:/lnd:ro
+      - ${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
       - ${APP_DATA_DIR}/data:/data
     environment:
         APP_PASSWORD: "${APP_PASSWORD}"
-        BITCOIN_IP: "${BITCOIN_IP}"
-        BITCOIN_RPC_PORT: "${BITCOIN_RPC_PORT}"
-        BITCOIN_RPC_USER: "${BITCOIN_RPC_USER}"
-        BITCOIN_RPC_PASS: "${BITCOIN_RPC_PASS}"
-        LND_IP: "${LND_IP}"
-        LND_GRPC_PORT: ${LND_GRPC_PORT}
+        BITCOIN_IP: "${APP_BITCOIN_NODE_IP}"
+        BITCOIN_RPC_PORT: "${APP_BITCOIN_RPC_PORT}"
+        BITCOIN_RPC_USER: "${APP_BITCOIN_RPC_USER}"
+        BITCOIN_RPC_PASS: "${APP_BITCOIN_RPC_PASS}"
+        LND_IP: "${APP_LIGHTNING_NODE_IP}"
+        LND_GPRC_PORT: ${APP_LIGHTNING_NODE_GRPC_PORT}
     networks:
       default:
         ipv4_address: $APP_LIGHTNING_SHELL_IP
