--- a/squeaknode/docker-compose.yml
+++ b/squeaknode/docker-compose.yml
@@ -14,21 +14,21 @@ services:
       - "$APP_SQUEAKNODE_GRPC_PORT:$APP_SQUEAKNODE_GRPC_PORT"
     volumes:
       - ${APP_DATA_DIR}/sqk:/sqk
-      - ${LND_DATA_DIR}:/lnd:ro
+      - ${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
     user: "1000:1000"
     environment:
       # Bitcoin Core connection details
-      SQUEAKNODE_BITCOIN_RPC_HOST: $BITCOIN_IP
-      SQUEAKNODE_BITCOIN_RPC_PORT: $BITCOIN_RPC_PORT
-      SQUEAKNODE_BITCOIN_RPC_USER: $BITCOIN_RPC_USER
-      SQUEAKNODE_BITCOIN_RPC_PASS: $BITCOIN_RPC_PASS
-      SQUEAKNODE_BITCOIN_ZEROMQ_HASHBLOCK_PORT: $BITCOIN_ZMQ_HASHBLOCK_PORT
+      SQUEAKNODE_BITCOIN_RPC_HOST: $APP_BITCOIN_NODE_IP
+      SQUEAKNODE_BITCOIN_RPC_PORT: $APP_BITCOIN_RPC_PORT
+      SQUEAKNODE_BITCOIN_RPC_USER: $APP_BITCOIN_RPC_USER
+      SQUEAKNODE_BITCOIN_RPC_PASS: $APP_BITCOIN_RPC_PASS
+      SQUEAKNODE_BITCOIN_ZEROMQ_HASHBLOCK_PORT: $APP_BITCOIN_ZMQ_HASHBLOCK_PORT
 
       # LND environment variables
-      SQUEAKNODE_LND_HOST: $LND_IP
-      SQUEAKNODE_LND_RPC_PORT: $LND_GRPC_PORT
+      SQUEAKNODE_LND_HOST: $APP_LIGHTNING_NODE_IP
+      SQUEAKNODE_LND_RPC_PORT: $APP_LIGHTNING_NODE_GRPC_PORT
       SQUEAKNODE_LND_TLS_CERT_PATH: "/lnd/tls.cert"
-      SQUEAKNODE_LND_MACAROON_PATH: "/lnd/data/chain/bitcoin/$BITCOIN_NETWORK/admin.macaroon"
+      SQUEAKNODE_LND_MACAROON_PATH: "/lnd/data/chain/bitcoin/$APP_BITCOIN_NETWORK/admin.macaroon"
 
       # Tor environment variables
       SQUEAKNODE_TOR_PROXY_IP: $TOR_PROXY_IP
@@ -39,11 +39,11 @@ services:
       SQUEAKNODE_WEBADMIN_USERNAME: "umbrel"
       SQUEAKNODE_WEBADMIN_PASSWORD: "${APP_PASSWORD}"
 
-      SQUEAKNODE_NODE_NETWORK: "$BITCOIN_NETWORK"
+      SQUEAKNODE_NODE_NETWORK: "$APP_BITCOIN_NETWORK"
       SQUEAKNODE_NODE_SQK_DIR_PATH: "/sqk"
       SQUEAKNODE_NODE_MAX_SQUEAKS: 10000
 
-      SQUEAKNODE_SERVER_EXTERNAL_ADDRESS: $SQUEAKNODE_P2P_HIDDEN_SERVICE
+      SQUEAKNODE_SERVER_EXTERNAL_ADDRESS: $APP_SQUEAKNODE_P2P_HIDDEN_SERVICE
 
       DEBUG: "squeaknode:*"
     networks:
